# model1

./: .gitignore  Dockerfile  README.md  boot.sh  pyproject.toml
micronets/: exampleUsage.py  realtimeVideo.py
model1/: MicroExpNet.py  server.py
model1/exampleScripts/: exampleUsage.py  realtimeVideo.py
tests/: test_micronets.py
